WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237018
[WebAuthn] Fix lifetime issue in WebAuthenticatorCoordinatorProxy
https://bugs.webkit.org/show_bug.cgi?id=237018
Summary
[WebAuthn] Fix lifetime issue in WebAuthenticatorCoordinatorProxy
pascoe@apple.com
Reported
2022-02-21 21:51:25 PST
A recent refactor to the completion handler in performRequest resulted in registrations not to complete.
Attachments
Patch
(15.08 KB, patch)
2022-02-21 22:20 PST
,
pascoe@apple.com
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
pascoe@apple.com
Comment 1
2022-02-21 21:51:44 PST
rdar://89206950
pascoe@apple.com
Comment 2
2022-02-21 22:20:57 PST
Created
attachment 452825
[details]
Patch
Brent Fulgham
Comment 3
2022-02-22 09:22:14 PST
Comment on
attachment 452825
[details]
Patch r=me
EWS
Comment 4
2022-02-22 10:22:45 PST
Committed
r290317
(
247639@main
): <
https://commits.webkit.org/247639@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 452825
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug